# kmers_rs

./: Cargo.toml  README.md
kmers_rs/: Cargo.toml  README.md
kmers_rs/src/: main.rs
src/: fastx.rs  kmers.rs  kmers_simd.rs  kmers_utils.rs  kmers_vanilla.rs  lib.rs  main.rs
tests/: test.rs
