[package]
name = "kmers_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = { version = "1.10.0" }
rstest = { version = "0.25.0" }
clap = { version = "4.5.39", features = ["derive"] }
log = { version = "0.4.27" }
simple_logger = { version = "5.0.0" }
scalable_cuckoo_filter = { version = "0.4.0" }
fxhash = { version = "0.2.1" }
bio = { version = "2.3.0" }
flate2 = { version = "1.1.1" }
tinyvec = { version = "1.9.0", features = ["alloc"] }

[profile.profiling]
inherits = "release"
debug = true

[profile.release]
debug = 1
